welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: ';' expected but 'false' found.
while (estSurBiscuit) == false {
                         ^